src/test/deca/context/invalid/provided/not_expression1.deca
/*/ Description:
//    Not expression
//
// Resultats:
//    Ligne 16: Not for not boolean.
// 
// Historique:
//    cree le 01/01/2022*/

{
   



   /* Doit etre refuse.*/
   boolean = !3;
}
